@@ -6,6 +6,7 @@
 	all : fixed super constructor call when extending externs (#7837, #9501)
 	display : fixed completion for out-of-bounds argument in a call (#9435)
 	display : fixed "find references" through interfaces (#9470)
+	display : optimized "find references" (#9504)
 	macro : fixed type intersection syntax in macro reification (#9404)
 	lua : fixed lua code generation without `--main` compilation argument (#9489)
 	php : added an overload signature for `session_set_cookie_params` function (#9507)
